2010-06-29  Roland McGrath  <roland@redhat.com>

	* libdwP.h (dwarf_file_reloc): Remove resolve_symbol member,
	add dwflmod member instead.
	* relocate.h: Declare __libdwfl_relocate_setup and
	__libdwfl_relocate_symbol.
	* relocate.c (noresolve_symbol): Removed.
	(__libdw_relocate_begin): Initialize dwflmod instead of resolve_symbol.
	(__libdw_relocate_shndx): Removed, now in libdwfl.
	(digest_relocs): Call __libdwfl_relocate_setup.
	(__libdw_relocate_address): Call __libdwfl_relocate_symbol.

	* dwarf_lineaddr.c: Add INTDEF.
	* libdwP.h: Add INTDECL.

	* dwarf_getsrc_relocatable.c: New file.
	* Makefile.am (libdw_a_SOURCES): Add it.
	* libdw.h: Declare it.
	* libdw.map (ELFUTILS_0.149): Add it.

	* dwarf_getsrc_die.c: Add INTDEF.
	* libdwP.h: Add INTDECL.

	* libdwP.h (struct Dwarf_Lines_s): Change reloc member to int pointer.
	* dwarf_getsrclines.c (struct linelist): Add reloc/symndx/shndx members.
	(compare_lines): Sort by shndx before line.addr.
	(dwarf_getsrclines): Resolve relocatable addresses to a symndx and
	section-relative address.
	* dwarf_line_relocatable.c: Initialize symndx instead of valp.
	* dwarf_lineaddr.c: Use __libdw_relocate_shndx

	* relocate.c (__libdw_relocatable_getsym): New function.
	(__libdw_relocate_address, __libdw_relocate_offset): Call it.
	(__libdw_relocate_shndx): New function.
	* relocate.h: Declare them.

	* libdw.h (Dwarf_Relocatable): Use uint8_t for sec and form members.
	Add symndx member.
	* dwarf_relocatable_info.c: Update RELOC with non-null valp to
	one with a null valp, symndx set, and adjust section-relative.
	If RELOC->valp is already null, use cached symndx.

2010-06-24  Roland McGrath  <roland@redhat.com>

	* encoded-value.h (encoded_value_size): Replace E_IDENT parameter
	with ADDRESS_SIZE.
	(read_encoded_value): Update caller.
	* fde.c (binary_search_fde): Likewise.
	* dwarf_next_cfi.c: Likewise.
	* cfi.h (struct dwarf_cie): New member address_size.
	(CFI_ADDRSIZE): New macro.