@@ -1,3 +1,8 @@
+2010-06-30  Roland McGrath  <roland@redhat.com>
+
+	* relocate.c (digest_relocs, compare_digested_reloc): Use qsort on an
+	array of pointers, not structs.
+
 2010-06-29  Roland McGrath  <roland@redhat.com>
 
 	* libdwP.h (dwarf_file_reloc): Remove resolve_symbol member,
